@@ -1,6 +1,8 @@
 FROM neo4j:5.7.0-community
 MAINTAINER Jinghe Song <songjh@buaa.edu.cn>
 
+RUN echo Asia/Shanghai > /etc/timezone
+
 # install necessary software for neo4j.
 RUN apt-get update && apt-get install -y --no-install-recommends \
   wget curl unzip git miller \
@@ -18,8 +20,27 @@ RUN wget -nv "https://dlcdn.apache.org/maven/maven-3/$MAVEN_VERSION/binaries/apa
 
 ENV MAVEN_HOME /usr/share/maven
 
+RUN curl -s "https://get.sdkman.io" | bash \
+ && source "$HOME/.sdkman/bin/sdkman-init.sh" \
+ && sdk install java 17.0.7-tem \
+ && sdk install gradle 8.5 
+
 WORKDIR /db/bin/aion
 
 COPY . .
 
+WORKDIR /db/bin/aion/community/temporal-graph
+RUN git clone https://github.com/neo4j/graph-data-science.git \
+ && cd graph-data-science \
+ && git checkout 2.4.0-alpha06 \
+ && git apply ../temporal.patch
+
+ENV GRADLE_OPTS "--add-exports jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED"
+
+RUN ./gradlew :open-packaging:shadowCopy -Pneo4jVersion=5.7.0 -x javadoc
+RUN ./gradlew publishToMavenLocal -x javadoc
+
+WORKDIR /db/bin/aion/community
 RUN mvn -B clean install -DskipTests -Dspotless.check.skip -Dlicense.skip -Denforcer.skip -T1C
+
+# ENTRYPOINT ["/db/bin/aion/docker-entrypoint.sh"]
